--- a/example-project/Gemfile
+++ b/example-project/Gemfile
@@ -5,7 +5,7 @@ ruby "2.7.4"
 
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 # gem "rails", "~> 7.0.4"
-gem "rails", "~> 7.0.4"
+gem 'rails', '~> 6.1.4', '>= 6.1.4.1'
 
 
 # Use postgresql as the database for Active Record
@@ -30,7 +30,7 @@ gem "bcrypt", "~> 3.1.7"
 gem "tzinfo-data", platforms: %i[ mingw mswin x64_mingw jruby ]
 
 # Reduces boot times through caching; required in config/boot.rb
-gem "bootsnap", require: false
+gem 'bootsnap', '>= 1.4.4', require: false
 
 # Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
 # gem "image_processing", "~> 1.2"
